--- a/app/src/main/res/layout/bottomsheetmenu.xml
+++ b/app/src/main/res/layout/bottomsheetmenu.xml
@@ -5,32 +5,42 @@
     android:layout_height="match_parent"
     android:background="@drawable/dialog_bg">
 
-    
     <TextView
         android:id="@+id/chooseComunity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:text="Please choose a community"
         android:layout_marginTop="5dp"
-        android:textSize="25dp"
-        android:textStyle="bold"
+        android:fontFamily="@font/afacad"
+        android:text="Choose"
+        android:textAlignment="center"
         android:textColor="@color/black"
-        />
+        android:textSize="25dp"
+        android:textStyle="bold" />
+
+
 
     <LinearLayout
-        android:id="@+id/layoutRSCicendo"
+        android:id="@+id/FileUpload"
         android:layout_marginTop="20dp"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="8dp">
 
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_baseline_add_photo_alternate_24"/>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="PMN RS Mata Cicendo"
-            android:textSize="15sp"/>
+            android:layout_marginStart="16dp"
+            android:fontFamily="@font/afacad"
+            android:text="File Upload"
+            android:textSize="20sp"
+            android:textStyle="bold" />
     </LinearLayout>
 
     <View
@@ -39,18 +49,27 @@
         android:background="@color/app_theme" />
 
     <LinearLayout
-        android:id="@+id/layoutJEC"
+        android:id="@+id/History"
         android:layout_marginTop="20dp"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="8dp">
 
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:src="@drawable/baseline_history_24_black"/>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="JEC Eye Hospitals and Clinics"
-            android:textSize="15sp"/>
+            android:layout_marginStart="16dp"
+            android:fontFamily="@font/afacad"
+            android:text="History"
+            android:textSize="20sp"
+            android:textStyle="bold" />
     </LinearLayout>
 
     <View
@@ -58,40 +77,29 @@
         android:layout_height="1dp"
         android:background="@color/app_theme" />
 
-
     <LinearLayout
-        android:id="@+id/layoutAAO"
+        android:id="@+id/About"
         android:layout_marginTop="20dp"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="8dp">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="American Academy of Ophthalmology"
-            android:textSize="15sp"/>
-    </LinearLayout>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/app_theme" />
-    <LinearLayout
-        android:id="@+id/layoutIABP"
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="8dp">
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_gravity="center"
+            android:src="@drawable/about"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="International Agency for the Prevention of Blindness"
-            android:textSize="15sp"/>
+            android:layout_marginStart="16dp"
+            android:fontFamily="@font/afacad"
+            android:text="About"
+            android:textSize="20sp"
+            android:textStyle="bold" />
     </LinearLayout>
-
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
