--- a/app/src/main/res/layout/activity_image_upload.xml
+++ b/app/src/main/res/layout/activity_image_upload.xml
@@ -8,63 +8,27 @@
     android:background="@color/gray100"
     tools:context=".ui.ImageUpload">
 
-    <TextView
-        android:id="@+id/resultTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="16dp"
-        android:gravity="center"
-        android:lines="2"
-        android:textSize="16sp"
-        android:textStyle="bold" />
+
 
     <LinearLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="400dp"
-        android:layout_marginLeft="50dp"
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="130dp"
-        android:layout_marginRight="50dp"
-        android:background="@drawable/dashed_border"
+        android:layout_marginRight="10dp"
         android:gravity="center"
         android:orientation="vertical"
         android:padding="16dp">
-
 
 
         <ImageView
             android:id="@+id/selectedImage"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="centerInside"
-            android:visibility="gone" />
+            android:scaleType="centerCrop"
+            android:background="@drawable/baseline_image_24" />
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:src="@drawable/ic_cloud_upload_24"
-            app:tint="@color/blue500" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:fontFamily="sans-serif-medium"
-            android:text="@string/dragfile"
-            android:textColor="@color/gray700"
-            android:textSize="18sp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:text="@string/drag"
-            android:textColor="@color/gray500"
-            android:gravity="center"
-            android:textSize="14sp" />
 
     </LinearLayout>
 
@@ -79,6 +43,8 @@
         android:text="@string/browseFile"
         app:cornerRadius="8dp" />
 
+
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/analyze"
         android:layout_width="wrap_content"
@@ -89,5 +55,6 @@
         android:layout_marginTop="10dp"
         android:text="@string/analyzeImage"
         app:cornerRadius="8dp" />
+
 
 </RelativeLayout>
