--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,37 +29,37 @@
                     android:layout_height="match_parent">
 
                     <ImageView
-                        android:id="@+id/imageView2"
+                        android:id="@+id/menu"
                         android:layout_width="50dp"
                         android:layout_height="50dp"
-                        android:layout_marginStart="32dp"
-                        android:layout_marginTop="32dp"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginTop="16dp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:srcCompat="@drawable/user" />
+                        app:srcCompat="@drawable/baseline_menu_24" />
 
                     <TextView
                         android:id="@+id/textUser"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="8dp"
-                        android:text="Hi, User"
+                        android:layout_marginStart="16dp"
+                        android:text="User"
                         android:textColor="@color/white"
                         android:textSize="15sp"
                         android:textStyle="bold"
-                        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
-                        app:layout_constraintStart_toEndOf="@+id/imageView2"
-                        app:layout_constraintTop_toTopOf="@+id/imageView2" />
+                        app:layout_constraintBottom_toBottomOf="@+id/menu"
+                        app:layout_constraintStart_toEndOf="@+id/menu"
+                        app:layout_constraintTop_toTopOf="@+id/menu" />
 
                     <ImageView
                         android:id="@+id/logoutButton"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="24dp"
-                        android:src="@drawable/baseline_logout_24"
-                        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_marginEnd="16dp"
+                        android:src="@drawable/user"
+                        app:layout_constraintBottom_toBottomOf="@+id/menu"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="@+id/imageView2" />
+                        app:layout_constraintTop_toTopOf="@+id/menu" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <TextView
@@ -68,6 +68,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="32dp"
                     android:layout_marginTop="32dp"
+                    android:fontFamily="@font/poppins"
                     android:text="Explore Your Eye Health \nin SightSafe"
                     android:textColor="@color/white"
                     android:textSize="25dp"
@@ -78,6 +79,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
+                    android:fontFamily="@font/poppins"
                     android:text="You have had your eyes \nchecked as many as: "
                     android:layout_marginStart="32dp"
                     android:textColor="@color/white"
@@ -88,7 +90,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:text="Angka"
+                    android:text="Number"
+                    android:fontFamily="@font/poppins"
                     android:layout_marginStart="32dp"
                     android:textColor="@color/white"
                     android:textStyle="bold"
@@ -158,12 +161,14 @@
                                 android:layout_height="wrap_content"
                                 android:text="File Upload"
                                 android:textAlignment="center"
+                                android:fontFamily="@font/poppins"
                                 android:textSize="16sp"
                                 android:textStyle="bold" />
                         </LinearLayout>
                     </androidx.cardview.widget.CardView>
 
                     <androidx.cardview.widget.CardView
+                        android:id="@+id/selectHistory"
                         android:layout_width="100dp"
                         android:layout_height="120dp"
                         android:layout_margin="10dp"
@@ -199,6 +204,7 @@
                                 android:layout_height="wrap_content"
                                 android:text="History"
                                 android:textAlignment="center"
+                                android:fontFamily="@font/poppins"
                                 android:textSize="16sp"
                                 android:textStyle="bold" />
                         </LinearLayout>
@@ -241,6 +247,7 @@
                                 android:layout_height="wrap_content"
                                 android:text="Community"
                                 android:textAlignment="center"
+                                android:fontFamily="@font/poppins"
                                 android:textSize="16sp"
                                 android:textStyle="bold" />
                         </LinearLayout>
@@ -251,7 +258,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="32dp"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="0dp"
                     android:layout_marginEnd="32dp"
                     android:orientation="vertical"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -262,16 +269,42 @@
                         android:id="@+id/textView4"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." />
+                        android:fontFamily="@font/poppins"
+                        android:textStyle="bold"
+                        android:textSize="20sp"
+                        android:text="Why is maintaining eye health important?"/>
 
-
-                    <TextView
-                        android:id="@+id/textView5"
-                        android:layout_marginTop="20dp"
-                        android:layout_width="match_parent"
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." />
+                        app:cardCornerRadius="8dp"
+                        app:cardElevation="4dp">
 
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical">
+
+                            <ImageView
+                                android:id="@+id/imageView2"
+                                android:layout_width="wrap_content"
+                                android:layout_height="150dp"
+                                app:srcCompat="@drawable/eyecheck_banner" />
+
+                            <TextView
+                                android:id="@+id/textView5"
+                                android:layout_marginTop="10dp"
+                                android:layout_marginStart="10dp"
+                                android:layout_marginEnd="10dp"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:textSize="15sp"
+                                android:justificationMode="inter_word"
+                                android:fontFamily="@font/poppins"
+                                android:text="Maintaining eye health is crucial because our eyes are essential for most daily activities, allowing us to perceive and interact with the world around us. Good vision supports productivity, learning, and safety, while poor eye health can lead to discomfort, impaired vision, or even permanent blindness if not addressed. Regular eye care helps detect and prevent conditions like myopia, cataracts, or glaucoma early, ensuring long-term quality of life and independence." />
+
+                        </LinearLayout>
+                    </androidx.cardview.widget.CardView>
                     <TextView
                         android:id="@+id/textView6"
                         android:layout_marginTop="20dp"
