--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="app_theme_light">#f6fbff</color>
     <color name="edit_text_background">#f6fbff</color>
     <color name="edit_text_border">#17b8ad</color>
+    <color name="red">#d30000</color>
 
 
     <color name="colorPrimary">#17b8ad</color>
