--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -8,6 +8,7 @@
     tools:context=".ui.ResultActivity">
 
 
+
     <ImageView
         android:id="@+id/exit"
         android:layout_width="50dp"
@@ -44,7 +45,7 @@
     <LinearLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
+        android:layout_height="300dp"
         android:layout_marginTop="210dp"
         android:gravity="center"
         android:orientation="vertical"
@@ -84,7 +85,19 @@
             android:text="result"
             android:textSize="16sp"
             android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginEnd="24dp"
+            android:text="Handling"
+            android:textSize="16sp"
+            android:layout_marginTop="20dp"/>
+
     </LinearLayout>
+
+
 
     <Button
         android:id="@+id/save"
@@ -95,6 +108,8 @@
         app:layout_constraintStart_toStartOf="parent"
         android:text="Save"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
