--- a/app/src/main/res/layout/activity_login_user.xml
+++ b/app/src/main/res/layout/activity_login_user.xml
@@ -135,6 +135,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
         android:alpha="0"
+        android:textSize="18sp"
         android:background="@drawable/rounded_button"
         android:backgroundTint="@color/navy"
         android:text="Login"
