--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -58,12 +58,13 @@
     <Button
         android:id="@+id/loginButton"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="64dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="56dp"
+        android:textSize="18sp"
         android:alpha="0"
         android:background="@drawable/rounded_button"
-        android:text="Login"
+        android:text="Sign In"
         android:textColorLink="#956060"
         app:layout_constraintEnd_toEndOf="@+id/signupButton"
         app:layout_constraintHorizontal_bias="1.0"
@@ -74,13 +75,14 @@
     <Button
         android:id="@+id/signupButton"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="64dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="136dp"
         android:layout_marginEnd="20dp"
         android:alpha="0"
+        android:textSize="18sp"
         android:background="@drawable/rounded_button"
-        android:text="Signup"
+        android:text="Sign Up"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
