--- a/app/src/main/res/layout/bottomsheetprofile.xml
+++ b/app/src/main/res/layout/bottomsheetprofile.xml
@@ -24,7 +24,7 @@
             android:layout_marginEnd="16dp"
             android:textAlignment="center"
             android:layout_gravity="center"
-            android:fontFamily="@font/afacad"
+            android:fontFamily="@font/poppins"
             android:text="Logout"
             android:textColor="@color/red"
             android:textSize="20sp"
