--- a/app/src/main/res/drawable/border.xml
+++ b/app/src/main/res/drawable/border.xml
@@ -4,7 +4,7 @@
     <item>
         <shape android:shape="rectangle">
             <solid android:color="@android:color/white"/>
-            <stroke android:width="1dp" android:color="@android:color/black"/>
+            <stroke android:width="1dp" android:color="@color/app_theme"/>
             <corners android:radius="8dp"/>
         </shape>
     </item>
