--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -270,15 +270,19 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/poppins"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginEnd="16dp"
                         android:text="Why is maintaining eye health important?"
                         android:textSize="20sp"
                         android:textStyle="bold" />
 
-                    <androidx.cardview.widget.CardView
+                    <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        app:cardCornerRadius="8dp"
-                        app:cardElevation="4dp">
+                        android:layout_margin="8dp"
+                        android:background="@drawable/border"
+                        android:padding="8dp"
+                        android:id="@+id/cardBanner">
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -311,10 +315,9 @@
                                 android:layout_marginEnd="10dp"
                                 android:textSize="15sp"
                                 android:fontFamily="@font/poppins"
-                                android:text="SightSafe is here for you as the beginning of detecting eye diseases, because our tagline is  Protect Your Sight, Detect with Insight."/>
-
+                                android:text="SightSafe is here for you as the beginning of detecting eye diseases, because our tagline is Protect Your Sight, Detect with Insight."/>
                         </LinearLayout>
-                    </androidx.cardview.widget.CardView>
+                    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
                     <LinearLayout
