--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,7 +12,7 @@
 
     <style name="Theme.App.SplashScreen" parent="Theme.SplashScreen">
         <item name="windowSplashScreenBackground">@color/white</item>
-        <item name="windowSplashScreenAnimatedIcon">@drawable/sight_safe</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/logo2</item>
         <item name="postSplashScreenTheme">@style/Base.Theme.SightSafe</item>
     </style>
 
